tests/baselines/reference/jsdocParameterParsingInfiniteLoop.errors.txt
tests/cases/compiler/example.js(3,20): error TS1110: Type expected.


==== tests/cases/compiler/example.js (1 errors) ====
    // @ts-check
    /**
     * @type {function(@foo)}
                       ~
!!! error TS1110: Type expected.
     */
    let x;